fix for horizontal scrolling on mobile

--- a/src/assets/base.css
+++ b/src/assets/base.css
@@ -61,7 +61,6 @@ a {
 }
 
 body {
-  overflow-x: hidden;
   color: var(--color-text);
   background: var(--color-background);
   transition: color 0.5s, background-color 0.5s;
